src/test/deca/syntax/valid/TestWhile.deca
//Description :
//	test de while
//
//Résultats :
//	ok 
{int x = 0;
while (true) {
    x = x + 1;
    }
}